--- a/app/app/src/main/res/layout/activity_nous_contacter.xml
+++ b/app/app/src/main/res/layout/activity_nous_contacter.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10sp"
-        android:text="Un problème? Une question? Une suggestion? Une réclamation? Dites Nous tout! \n Notre service d'assistance est à votre écoute."
+        android:text="@string/txt_contact"
         android:textAlignment="center"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:autofillHints=""
-        android:hint="Votre message"
+        android:hint="@string/hint_message"
         android:inputType="number|text"
         android:minHeight="48dp"
         android:padding="10sp"
@@ -35,7 +35,7 @@
         android:id="@+id/envoyer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Envoyer"
+        android:text="@string/btn_envoyer"
         android:padding="15sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/message" />
