--- a/app/app/src/main/res/layout/profil_eleve.xml
+++ b/app/app/src/main/res/layout/profil_eleve.xml
@@ -20,27 +20,29 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            app:srcCompat="@drawable/ic_baseline_account_circle_24" />
+            app:srcCompat="@drawable/ic_baseline_account_circle_24"
+            android:contentDescription="@string/dsc_icon_eleve" />
 
         <TextView
             android:id="@+id/nom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="ELEVE X" />
+            android:text="@string/defaut_nom_eleve" />
 
         <TextView
             android:id="@+id/suplement"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="ELEVE BOF" />
+            android:text="@string/defaut_commentaire_eleve" />
         <ImageView
             android:id="@+id/couleur"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             app:tint="#FFFFFF00"
-            app:srcCompat="@drawable/ic_baseline_adjust_24"/>
+            app:srcCompat="@drawable/ic_baseline_adjust_24"
+            android:contentDescription="@string/dsc_pastille_couleur" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
