--- a/app/app/src/main/res/layout/profil_eleve.xml
+++ b/app/app/src/main/res/layout/profil_eleve.xml
@@ -5,12 +5,12 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/fond_profil_eleve"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:padding="2dp"
         android:background="#BCBCBC"
-        android:foregroundTint="#EF0C0C"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -18,8 +18,10 @@
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:layout_weight="0"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             app:srcCompat="@drawable/ic_baseline_account_circle_24"
             android:contentDescription="@string/dsc_icon_eleve" />
 
@@ -27,7 +29,11 @@
             android:id="@+id/nom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_weight="0"
+            android:maxLength="15"
+            android:singleLine="true"
             android:text="@string/defaut_nom_eleve" />
 
         <TextView
@@ -35,13 +41,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/defaut_commentaire_eleve" />
+            android:singleLine="true"
+            android:text="@string/defaut_commentaire_eleve"
+            android:maxLength="30"/>
         <ImageView
             android:id="@+id/couleur"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            app:tint="#FFFFFF00"
+            app:tint="#00FFFF00"
             app:srcCompat="@drawable/ic_baseline_adjust_24"
             android:contentDescription="@string/dsc_pastille_couleur" />
     </LinearLayout>
