--- a/app/app/src/main/res/layout/activity_parametres_algorithme.xml
+++ b/app/app/src/main/res/layout/activity_parametres_algorithme.xml
@@ -118,7 +118,8 @@
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:visibility="gone">
+                    android:visibility="gone"
+                    tools:visibility="visible">
 
                     <Button
                         android:id="@+id/btn_affinite_i"
@@ -171,7 +172,8 @@
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:visibility="gone">
+                    android:visibility="gone"
+                    tools:visibility="visible">
 
                     <Button
                         android:id="@+id/btn_vue"
